--- a/regex.html
+++ b/regex.html
@@ -57,7 +57,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.60.0/codemirror.min.js"
         integrity="sha512-hc0zo04EIwTzKLvp2eycDTeIUuvoGYYmFIjYx7DmfgQeZPC5N27sPG2wEQPq8d8fCTwuguLrI1ffatqxyTbHJw=="
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./js/main.css">
     <style>
         .styled-background {
             background-color: #ff7;
@@ -81,7 +81,9 @@
             </div>
             
                 <div class="m-2 float-right">
-                    <a href="https://github.com/rkumar-bengaluru/regex" target="_blank">GitHub</a>
+                    <a href="https://github.com/rkumar-bengaluru/regex" target="_blank">
+                        <p class="text-white">GitHub</p>
+                    </a>
                 </div>
             
         </div>
@@ -126,7 +128,7 @@
                 <a href="https://www.vlocalshop.in/product/Y0C38CGPRA" target="_blank">
                     <div class="card text-center bg-primary" style="width: 18rem;">
                         <img class="card-img-top" src="/img/01-small.jpg" height='200px' alt="Card image cap">
-                        <ul class="list-unstyled list-inline">
+                        <ul class="list-unstyled list-inline text-white">
                             <li class="list-inline-item mx-0"><i class="fas fa-star mimosa-text"></i>
                             </li>
                             <li class="list-inline-item mx-0"><i class="fas fa-star mimosa-text"></i>
