--- a/regex.html
+++ b/regex.html
@@ -89,11 +89,9 @@
         </div>
 
         <div class="row  m-1">
-            <div class="mw-25">
-                <!-- Add Resources Here-->
-            </div>
+           
 
-            <div class="col ">
+            <div class="col-sm-8">
                 <div class="row m-1">
                     <div class="alert alert-primary input-group-text m-1" role="alert">
                         Your Regular Expression
@@ -116,7 +114,8 @@
                     </div>
                     <div class="form-control border-0 m-2">
 
-                        <textarea class="form-control m-5" id="editor" rows="10">Regular Expression Tesing tool is created by Rupak Kumar, and is hosted on Amazon AWS Platform.
+                        <textarea class="form-control m-5" id="editor" rows="10">Regular Expression Tesing tool is created by Rupak Kumar, 
+    and is hosted on Amazon AWS Platform.
     
     Add Your Test Data to test and debug your regular Expression.
                     </textarea>
@@ -124,7 +123,8 @@
 
                 </div>
             </div>
-            <div class="mw-25">
+            <div class="col">
+                <span>Ads. Apacs Badminton Racquet</span>
                 <a href="https://www.vlocalshop.in/product/Y0C38CGPRA" target="_blank">
                     <div class="card text-center bg-primary" style="width: 18rem;">
                         <img class="card-img-top" src="/img/01-small.jpg" height='200px' alt="Card image cap">
@@ -141,9 +141,7 @@
                             </li>
                         </ul>
                         <div class="card-body mt-0">
-                            <h6 class="card-title text-white text-monospace">Apacs™ Z-Ziggler Strunged (lbs) Badminton
-                                Racquet - with Free Full Cover
-                                & Grip Apacs™ Z-Ziggler Strunged (lbs) Badminton Racquet </h6>
+                            <h6 class="card-title text-white text-monospace">Apacs™ Z-Ziggler Strunged (lbs) .... </h6>
                             <p class="text-white text-monospace">₹ 2499 </p>
                         </div>
                     </div>
