--- a/src/regex.html
+++ b/src/regex.html
@@ -158,8 +158,13 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-191905399-1"></script>
     
+    <script >
+        var my = new myjson();
+        my.print('hello from html');
+    </script>
+
     <script type="module">
-        import { hello } from './src/html.js'
+        import { hello } from './html.js'
         hello('good morning...');
     </script>
     <script>
